# rovi

./: .gitignore  AppDesign.md  CMakeLists.txt  Calibration.md  CameraDriver.md  GettingStarted-TX2.md  GettingStarted-en.md  GettingStarted.md  Index.md  Install.sh  Language.md  License.md  Makefile  MasterTeach.md  README.md  REQUIRE.md  REQUIREMENT.md  RoVI-SXGA.desktop  RoVI-VGA.desktop  TopicsDetail.md  aaa.txt  b1a.txt  dev_b1.txt  dev_b2.txt  kidzania.md  package.xml  rovi.rosinstall
MasterTeachMethod/: Default.perspective  Default.rviz  MasterTeachMethod.launch  MasterTeachMethodSxga.sh  MasterTeachMethodVga.sh  MasterTeachMethod_socket.js  MasterTeachMethod_socket_log.js  MasterTeachMethod_solver.py  MasterTeachMethod_ui.py  README.md  crop.py  icp.py  launch_MasterTeachMethod.sh  param.yaml  sample_crop.json
QC/: Controller.md  README.md  hist.launch  hist.py  hist.yaml  param.yaml  perf3D.launch  perf3D.perspective  perf3D.py  perf3D.rviz
QC/p2p/: README.md  marker.py  p2p.launch  p2p.py  p2p.rviz  p2pp.py
R-Calib/: README.md  calib.launch  param.yaml  robot_calib.js
basler_example/: Makefile  cparser.c  cparser.h  grabber  grabber.c  imgpub.js
calib_board/: 15mm_A4.ai  18x13-15mm.yaml
html/: jquery.js  setgain.html  wsshare.js
img/: AppDesign.odg  MTDesign.odg
launch/: 17AA9393.launch  17C8087.launch  17C8089.launch  17C8102.launch  17C8105.launch  RoVI.desktop  RoVi3.desktop  dummy.launch  kidzania.launch  kidzania.launch.save  launch_rovi.sh  launch_rovi3.sh  launch_wpc.sh  rovi_run.launch  rovi_test.launch  rovirun.sh  run-ycam1s.launch  run-ycam2.launch  run-ycam3sxga.launch  run-ycam3vga.launch  run.launch  setting.sh  setting_17C8089.sh  setting_17C8097.sh  setting_17C8102.sh  setting_17C8105.sh  test.launch  ycam2h.launch  ycam3loader.sh  ycam3s.launch  ycam3s.sh  ycam3sxga.launch  ycam3sxga.sh  ycam3sxga_livecamera_pm.launch  ycam3sxga_m.launch  ycam3sxga_pshift_pm.launch  ycam3vga.launch  ycam3vga.sh  ycam3vga_livecamera_pm.launch  ycam3vga_m.launch  (+1 more)
lib/: libopencv_highgui.so.3.4.1  libopencv_stitching.so.3.4.1  libopencv_superres.so.3.4  libopencv_video.so.3.4
lib/x86_64/: libopencv_features2d.so.3.4.1  libopencv_flann.so.3.4.1  libopencv_shape.so.3.4
msg/: PickingPose.msg
pmjson/: ycam3sxga_livecamera_pm.json  ycam3sxga_pshift_pm.json  ycam3vga_livecamera_pm.json  ycam3vga_pshift_pm.json
r-calib/: Default.perspective  README-en.md  README.md  calib.launch  decomp.py  imsave.js  imsave.py  param.yaml  r-socket.js  rcalib.launch  rcalib_socket.js  rcalib_socket_nopubtf.js  rcalib_solver.py  rcalib_solver_subtf.py  repro.py  solver.js  solver.py
r_coord_publisher/: README.md  r_coord_publisher.js  r_coord_publisher.launch  test_r_coord_publisher.js
script/: GevForceIP.py  calib.js  cam_prm_reader.py  copy_rawtorect.js  example_main.js  grid.js  gvdump.js  gvgetid.js  gvload.js  gvloadSXGA.js  gvloadVGA.js  image_switcher.js  imsave.js  imsave1.js  imsep.js  livestream.js  main_node.js  notifier.js  p2qmatrix.py  param_watch.js  paraman.js  parameter.js  projector.js  pshift_genpc.js  readDoubleLE.js  robot_calib.js  rosrun.js  runner.js  sens_ctrl.js  setgain.js  setgev.sh  stillcapture.js  swtrigger.js  tflib.js  tflib.py  wsshare.js  xyz2q.js  ycam.md  ycam1h.js  ycam1s.js  (+5 more)
sentech_grabber/: Makefile  cparser.c  grabber.cpp  imgpub.js
shm-typed-array/: package.json
shm-typed-array/src/: node_shm.cc
src/: Aravis.cpp  Aravis.h  CalibBoard.h  CameraYCAM3D.cpp  CameraYCAM3D.hpp  CircleCalibBoard.h  ElapsedTimer.cpp  ElapsedTimer.hpp  ParaConfigure.h  ParamMPSFT.hpp  ParamPSFT.hpp  ParamPhaseMatching.hpp  ParamSGBM.hpp  PointCloud.h  UnionFind.hpp  YCAM3D.h  YPCData.cpp  YPCData.hpp  YPCGenerator.cpp  YPCGenerator.hpp  YPCGeneratorUnix.cpp  YPCGeneratorUnix.hpp  ball_node.cpp  calibrator.hpp  camera.h  camera_calibration.h  camera_distort.hpp  camera_pinhole.hpp  camera_undistort.hpp  common.h  depth_node.cpp  disparity_node.cpp  floats2pc.cpp  genpc_node.cpp  grid_node.cpp  iCalibBoardPoseSolver.hpp  iCalibBoardRecognizer.hpp  iCalibrator.hpp  iPointCloudGenerator.hpp  iStereoCamera.hpp  (+13 more)
srv/: Detect2D.srv  Dialog.srv  DigitalFilter.srv  GenPC.srv  GetCalibs.srv  GetGrid.srv  GetParam.srv  ImageFilter.srv  SetGenpcParam.srv  SetParam.srv  SetPose.srv  SetRemapParam.srv
test/: circle_detector.py  decomp.py  detector.js  detector.launch  dynparam_server.js  param_perf.js  param_perf.sh  robot_calib.sh  solvepnp.py  stereoSGBM.py  test9.js  test9.yaml  test9a.js  ycam3.sh
uml/: ErrorRecovery.act  ST.uxf  X1.seq
voxel-noise_reduction/: Makefile  Makefile.org  Makefile.python3  README.md  Readme.txt  libmain.cpp  macros.mak  main.c  main.cpp  mesh3d.h  mycommons.c  mycommons.cpp  mycommons.h  noise_reduct  noise_reduct.c  noise_reduct.cpp  noise_reduct.h  out_01_withoutnoise.ply  out_02_withoutnoise.ply  plyio.c  plyio.cpp  plyio.h  point.h  point_mesh.c  point_mesh.cpp  point_mesh.h  test.py  voxel.c  voxel.cpp  voxel.h
wpc/: circle_detector.py  detector.js  detector.launch
wrs2018/: README.md  launch_wrs.sh  launch_wrs_solver.sh  overlay_sample.py  wrs2018.desktop  wrs2018.launch  wrs2018.rviz  wrs2018_param.yaml  wrs2018_rcalib.launch  wrs2018_rcalib.perspective  wrs2018_socket.js  wrs2018_solver.py  wrs_solver.desktop  wrs_solver.launch
wrs2018/model/: Gear.stl
yaml/: 17AA9393.yaml  17C8089.yaml  17C8102.yaml  cam_l_rosparam_dump.yaml  cam_r_rosparam_dump.yaml  param.yaml  rovi_param.yaml  rovi_rosparam_dump.yaml  ycam1s-17AA9393.yaml  ycam1s.yaml  ycam2.yaml  ycam3sxga.yaml  ycam3sxga.yaml.bak  ycam3sxga_livecamera_ld.yaml  ycam3sxga_pshift_ld.yaml  ycam3vga.yaml  ycam3vga.yaml.bak  ycam3vga_pshift_ld.yaml
yaml/tmp/: cam1_rosparam_dump.yaml  cam1camera_dynparam_dump.yaml  cam2_rosparam_dump.yaml  cam2camera_dynparam_dump.yaml  camera_dump.yaml
